# gnome-theme-installer

./: .gitignore  Makefile  README.md  gnomelooks.py  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
getlooks/: Makefile  cli.py  core.py  looks.py  looks_path.py  requirements.txt  utils.py
gnomelooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: shell.py
