[tool.poetry]
name = "gnomelooks"
version = "0.1.3"
readme = "README.md"
description = ""
authors = ["Rishang <rishangbhavsarcs@gmail.com>"]
packages = [
    { include = "getlooks" },
]

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.4.0"
beautifulsoup4 = "*"
lxml = "*"
colorama = "*"
requests = "*"

[tool.poetry.scripts]
gnomelooks = "getlooks.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
