[tool.poetry]
name = "gnomelooks"
version = "0.1.7"
readme = "README.md"
description = ""
authors = ["Rishang <rishangbhavsarcs@gmail.com>"]
packages = [
    { include = "getlooks" }
]

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.4.1"
beautifulsoup4 = "*"
lxml = "*"
colorama = "*"
requests = "*"
rich = ">=12.4.0"

[tool.poetry.scripts]
gnomelooks = "getlooks.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
