[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnomelooks"
version = "0.3.0"
description = ""
readme = "README.md"
authors = [{ name = "Rishang", email = "rishangbhavsarcs@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "colorama",
    "lxml",
    "requests",
    "rich>=12.4.0",
    "typer>=0.7.0",
]

[project.scripts]
gnomelooks = "getlooks.cli:app"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest>=5.2",
]

[tool.setuptools.packages.find]
include = ["getlooks*"]
